# HiL

./: README.md
Certifications/: README.md
Data Acquisition of ATV/: README.md
RAG/: README.md  pyproject.toml
RAG/rag_generator/: rag_generator.py
RAG/utils/: ollama_functions.py
Retrieval-Augmented Generation (RAG) pipeline/RAG/: requirements.txt
Retrieval-Augmented Generation (RAG) pipeline/RAG/generated_tests/: test_fault_recovery.py  test_overvoltage_fault.py  test_undervoltage_warning.py
Retrieval-Augmented Generation (RAG) pipeline/RAG/tests/: test_01.py
Retrieval-Augmented Generation (RAG) pipeline/RAG/utils/: api_functions.py  prompts.py  rag_functions.py
