[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embedded-rag-testgen"
version = "1.0.0"
description = "RAG-powered pytest generator for embedded systems"
dependencies = [
    "sentence-transformers==3.0.1",      # ✅ Fixed version
    "faiss-cpu==1.8.0",                  # ✅ Latest stable
    "requests==2.32.3",
    "pyyaml==6.0.2",
    "numpy==1.26.4"                      # ✅ Python 3.12 compatible
]

[project.optional-dependencies]
dev = [
    "streamlit==1.38.0",
    "pytest==8.3.2",
    "pytest-cov==5.0.0"
]
